Keras Functional API

--- a/artificial_neural_networks.ipynb
+++ b/artificial_neural_networks.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kumarujjawal/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from sklearn.linear_model import Perceptron\n",
@@ -79,9 +88,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kumarujjawal/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 216, got 192\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/kumarujjawal/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/kumarujjawal/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras"
@@ -485,13 +507,277 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regression Multi-layer Perceptron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading Cal. housing from https://ndownloader.figshare.com/files/5976036 to /Users/kumarujjawal/scikit_learn_data\n"
+     ]
+    }
+   ],
+   "source": [
+    "housing = fetch_california_housing()\n",
+    "\n",
+    "X_train_full, X_test, y_train_full, y_test = train_test_split(housing.data, housing.target)\n",
+    "\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_train_full, y_train_full)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scalar = StandardScaler()\n",
+    "\n",
+    "X_train = scalar.fit_transform(X_train)\n",
+    "X_valid = scalar.transform(X_valid)\n",
+    "X_test = scalar.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 11610 samples, validate on 3870 samples\n",
+      "Epoch 1/20\n",
+      "11610/11610 [==============================] - 2s 131us/sample - loss: 0.7954 - val_loss: 0.5697\n",
+      "Epoch 2/20\n",
+      "11610/11610 [==============================] - 1s 76us/sample - loss: 0.4879 - val_loss: 0.5499\n",
+      "Epoch 3/20\n",
+      "11610/11610 [==============================] - 1s 64us/sample - loss: 0.4605 - val_loss: 1.0725\n",
+      "Epoch 4/20\n",
+      "11610/11610 [==============================] - 1s 61us/sample - loss: 0.4820 - val_loss: 0.4599\n",
+      "Epoch 5/20\n",
+      "11610/11610 [==============================] - 1s 61us/sample - loss: 0.4270 - val_loss: 0.4535\n",
+      "Epoch 6/20\n",
+      "11610/11610 [==============================] - 1s 61us/sample - loss: 0.4060 - val_loss: 0.4386\n",
+      "Epoch 7/20\n",
+      "11610/11610 [==============================] - 1s 61us/sample - loss: 0.4025 - val_loss: 0.4260\n",
+      "Epoch 8/20\n",
+      "11610/11610 [==============================] - 1s 61us/sample - loss: 0.3914 - val_loss: 0.4277\n",
+      "Epoch 9/20\n",
+      "11610/11610 [==============================] - 1s 62us/sample - loss: 0.3885 - val_loss: 0.4167\n",
+      "Epoch 10/20\n",
+      "11610/11610 [==============================] - 1s 61us/sample - loss: 0.3832 - val_loss: 0.4102\n",
+      "Epoch 11/20\n",
+      "11610/11610 [==============================] - 1s 61us/sample - loss: 0.3806 - val_loss: 0.4062\n",
+      "Epoch 12/20\n",
+      "11610/11610 [==============================] - 1s 63us/sample - loss: 0.3825 - val_loss: 0.4066\n",
+      "Epoch 13/20\n",
+      "11610/11610 [==============================] - 1s 63us/sample - loss: 0.3922 - val_loss: 0.3978\n",
+      "Epoch 14/20\n",
+      "11610/11610 [==============================] - 1s 61us/sample - loss: 0.3712 - val_loss: 0.4076\n",
+      "Epoch 15/20\n",
+      "11610/11610 [==============================] - 1s 67us/sample - loss: 0.3827 - val_loss: 0.4004\n",
+      "Epoch 16/20\n",
+      "11610/11610 [==============================] - 1s 73us/sample - loss: 0.3690 - val_loss: 0.4244\n",
+      "Epoch 17/20\n",
+      "11610/11610 [==============================] - 1s 62us/sample - loss: 0.3768 - val_loss: 0.3988\n",
+      "Epoch 18/20\n",
+      "11610/11610 [==============================] - 1s 61us/sample - loss: 0.3658 - val_loss: 0.4205\n",
+      "Epoch 19/20\n",
+      "11610/11610 [==============================] - 1s 63us/sample - loss: 0.3687 - val_loss: 0.3924\n",
+      "Epoch 20/20\n",
+      "11610/11610 [==============================] - 1s 62us/sample - loss: 0.3713 - val_loss: 0.3891\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating the model\n",
+    "\n",
+    "model = keras.models.Sequential([\n",
+    "    keras.layers.Dense(30, activation='relu', input_shape=X_train.shape[1:]),\n",
+    "    keras.layers.Dense(1)\n",
+    "])\n",
+    "\n",
+    "model.compile(loss='mean_squared_error', optimizer='sgd')\n",
+    "\n",
+    "history = model.fit(X_train, y_train, epochs=20, validation_data=(X_valid, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5160/5160 [==============================] - 0s 43us/sample - loss: 0.3723\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate\n",
+    "\n",
+    "mse_test = model.evaluate(X_test, y_test)\n",
+    "\n",
+    "X_new = X_test[:3]\n",
+    "\n",
+    "y_pred = model.predict(X_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.2541902],\n",
+       "       [1.5411205],\n",
+       "       [1.4243114]], dtype=float32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keras Functional API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ = keras.layers.Input(shape=X_train.shape[1:])\n",
+    "hidden1 = keras.layers.Dense(30, activation='relu')(input_)\n",
+    "hidden2 = keras.layers.Dense(30, activation='relu')(hidden1)\n",
+    "concat = keras.layers.Concatenate()([input_, hidden2])\n",
+    "output = keras.layers.Dense(1)(concat)\n",
+    "model = keras.Model(inputs=[input_], outputs=[output])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dealing with multiple inputs\n",
+    "input_A = keras.layers.Input(shape=[5], name=\"wide_input\")\n",
+    "input_B = keras.layers.Input(shape=[6], name=\"deep_input\")\n",
+    "hidden1 = keras.layers.Dense(30, activation=\"relu\")(input_B)\n",
+    "hidden2 = keras.layers.Dense(30, activation=\"relu\")(hidden1)\n",
+    "concat = keras.layers.concatenate([input_A, hidden2])\n",
+    "output = keras.layers.Dense(1, name=\"output\")(concat)\n",
+    "model = keras.Model(inputs=[input_A, input_B], outputs=[output])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 11610 samples, validate on 3870 samples\n",
+      "Epoch 1/20\n",
+      "11610/11610 [==============================] - 1s 96us/sample - loss: 2.0430 - val_loss: 0.8188\n",
+      "Epoch 2/20\n",
+      "11610/11610 [==============================] - 1s 68us/sample - loss: 0.6946 - val_loss: 0.7018\n",
+      "Epoch 3/20\n",
+      "11610/11610 [==============================] - 1s 68us/sample - loss: 0.6333 - val_loss: 0.6720\n",
+      "Epoch 4/20\n",
+      "11610/11610 [==============================] - 1s 68us/sample - loss: 0.6087 - val_loss: 0.6498\n",
+      "Epoch 5/20\n",
+      "11610/11610 [==============================] - 1s 68us/sample - loss: 0.5899 - val_loss: 0.6342\n",
+      "Epoch 6/20\n",
+      "11610/11610 [==============================] - 1s 68us/sample - loss: 0.5730 - val_loss: 0.6157\n",
+      "Epoch 7/20\n",
+      "11610/11610 [==============================] - 1s 68us/sample - loss: 0.5591 - val_loss: 0.6025\n",
+      "Epoch 8/20\n",
+      "11610/11610 [==============================] - 1s 68us/sample - loss: 0.5461 - val_loss: 0.5888\n",
+      "Epoch 9/20\n",
+      "11610/11610 [==============================] - 1s 69us/sample - loss: 0.5334 - val_loss: 0.5778\n",
+      "Epoch 10/20\n",
+      "11610/11610 [==============================] - 1s 69us/sample - loss: 0.5246 - val_loss: 0.5694\n",
+      "Epoch 11/20\n",
+      "11610/11610 [==============================] - 1s 71us/sample - loss: 0.5150 - val_loss: 0.5597\n",
+      "Epoch 12/20\n",
+      "11610/11610 [==============================] - 1s 69us/sample - loss: 0.5078 - val_loss: 0.5520\n",
+      "Epoch 13/20\n",
+      "11610/11610 [==============================] - 1s 69us/sample - loss: 0.5008 - val_loss: 0.5449\n",
+      "Epoch 14/20\n",
+      "11610/11610 [==============================] - 1s 69us/sample - loss: 0.4946 - val_loss: 0.5384\n",
+      "Epoch 15/20\n",
+      "11610/11610 [==============================] - 1s 71us/sample - loss: 0.4890 - val_loss: 0.5343\n",
+      "Epoch 16/20\n",
+      "11610/11610 [==============================] - 1s 69us/sample - loss: 0.4834 - val_loss: 0.5262\n",
+      "Epoch 17/20\n",
+      "11610/11610 [==============================] - 1s 69us/sample - loss: 0.4785 - val_loss: 0.5195\n",
+      "Epoch 18/20\n",
+      "11610/11610 [==============================] - 1s 68us/sample - loss: 0.4740 - val_loss: 0.5155\n",
+      "Epoch 19/20\n",
+      "11610/11610 [==============================] - 1s 68us/sample - loss: 0.4695 - val_loss: 0.5113\n",
+      "Epoch 20/20\n",
+      "11610/11610 [==============================] - 1s 69us/sample - loss: 0.4656 - val_loss: 0.5046\n",
+      "5160/5160 [==============================] - 0s 36us/sample - loss: 0.4613\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(loss='mean_squared_error', optimizer=keras.optimizers.SGD(lr=1e-3))\n",
+    "\n",
+    "X_train_A, X_train_B = X_train[:, :5], X_train[:, 2:]\n",
+    "X_valid_A, X_valid_B = X_valid[:, :5], X_valid[:, 2:]\n",
+    "X_test_A, X_test_B = X_test[:, :5], X_test[:, 2:]\n",
+    "X_new_A, X_new_B = X_test_A[:3], X_test_B[:3]\n",
+    "history = model.fit((X_train_A, X_train_B), y_train, epochs=20, validation_data=((X_valid_A, X_valid_B), y_valid))\n",
+    "mse_test = model.evaluate((X_test_A, X_test_B), y_test)\n",
+    "y_pred = model.predict((X_new_A, X_new_B))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Re"
-   ]
+   "source": []
   }
  ],
  "metadata": {
